changes in form

--- a/form/form.css
+++ b/form/form.css
@@ -1,53 +1,61 @@
-header{
+header {
     color: rgb(83, 165, 104);
     padding: 20px;
-    
+
 }
 
-#tothenew{
+#tothenew {
     font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva, Verdana, sans-serif';
     font-weight: bold
+}
+
+
+textarea {
+    resize: none
 }
 
 ul {
     list-style: none;
     display: inline;
+
 }
 
-li{
-    display: inline-block;
+li {
+    /* display: inline-block; */
     float: right;
     padding-left: 12px
 }
 
-hr{
+hr {
     width: 97%;
 }
 
-.form{
-    width:600px;
+.form {
+    width: 600px;
     margin-left: 28%;
     border: 1px solid rgb(165, 172, 169);
-    border-radius: 5px
+    border-radius: 5px;
+
 }
 
-#bugReport{
-    padding: 20px
+#bugReport {
+    padding: 20px;
+    /* position: relative; */
 }
 
-#formtitle{
-    display: block;
+#formtitle {
+    /* display: block; */
     background-color: rgb(192, 187, 187);
-    color: white;
+    color: fff;
     font-size: 25px;
     padding: 20px;
     font-weight: bold
 }
 
-.fields{
-    display : block;
-    width:100%;
+.fields {
+    /* display: block; */
+    width: 100%;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 15px;
@@ -55,7 +63,7 @@ hr{
     font-weight: bold;
 }
 
-#version{
+#version {
     display: block;
     padding: 10px;
     width: 23%;
@@ -64,28 +72,27 @@ hr{
     border-radius: 5px;
 }
 
-.license{
+.license {
     display: block
 }
 
-#business{
+#business {
     margin-left: 50%
 }
 
-select{
-    background-color:  rgb(110, 212, 149);
+select {
+    background-color: rgb(110, 212, 149);
     color: whitesmoke;
 }
 
 
 
-.attach
-{
+.attach {
     width: 70%;
 }
 
 
-button[type=submit]{
+button[type=submit] {
     position: relative;
     border: 1px;
     border-radius: 5px;
@@ -97,13 +104,13 @@ button[type=submit]{
     font-weight: bold;
     margin-top: 15px;
     margin-block-end: 15px;
-    overflow: auto;
+    /* overflow: auto; */
     margin-left: 85%;
-   }
-   
-   #button{ 
-    display: block;
+}
+
+#button {
+    /* display: block; */
     border: 1px solid rgb(165, 172, 169);
     overflow: hidden;
     background-color: rgb(241, 233, 233);
-    }
+}
