--- a/newerTimes/main.css
+++ b/newerTimes/main.css
@@ -50,6 +50,14 @@ section p {
     float: left;
 }
 
+p {
+    padding: 10px 0 0 0;
+}
+
+h3 {
+    padding: 0 0 5px 0;
+}
+
 .outer-left {
     padding: 20px 20px 20px 0;
 }
@@ -140,8 +148,13 @@ a {
         display: block;
     }
 
+    .newerTimes {
+        width: 100%
+    }
+
     .mainHeading {
-        text-align: right
+        padding: 20px 0 0 0;
+        /* text-align: right */
     }
 
     .text-box {
