--- a/schoolZone/main.css
+++ b/schoolZone/main.css
@@ -209,7 +209,7 @@ a:hover {
 .banner-text {
     text-align: center;
     width: 50%;
-    color: white;
+    color: #fff;
     margin: 0 auto;
 }
 
