--- a/schoolZone/main.css
+++ b/schoolZone/main.css
@@ -181,20 +181,11 @@ a:hover {
 }
 
 
-.banner-image::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, .5);
-
-}
 
 
 .banner-image img {
     width: 100%;
+    filter: brightness(50%);
     height: 640px;
     object-fit: cover
 }
