--- a/toTheNew/main.css
+++ b/toTheNew/main.css
@@ -38,7 +38,7 @@ header {
 }
 
 .head-top {
-    background: linear-gradient(to right, rgb(240, 234, 234), rgb(255, 255, 255));
+    background: linear-gradient(to right, rgb(240, 234, 234), rgb(240, 234, 234), rgb(255, 255, 255));
 }
 
 .head-m {
