--- a/agni/main.css
+++ b/agni/main.css
@@ -1,4 +1,151 @@
-table {
-    background-image: url("https://png.pngtree.com/thumb_back/fw800/back_pic/04/00/85/9357ff2fc21175b.jpg");
-    color: #6f3b3c;
+header {
+    background-image: url("sources/header-bg.jpg");
+    width: 100%;
+}
+
+
+
+.branding {
+    display: inline-block;
+    padding: 20px;
+}
+
+
+.branding:after {
+    content: '|';
+    color: #fff;
+    font-size: 30px;
+    margin-left: 10px;
+    vertical-align: 20px
+}
+
+#google_translate_element {
+    display: inline-block;
+    vertical-align: 5px
+}
+
+.goog-logo-link {
+    display: none !important;
+}
+
+.goog-te-gadget {
+    color: transparent !important;
+
+}
+
+.goog-te-gadget .goog-te-combo {
+
+    font-size: 15px;
+    width: 53px;
+    border: none;
+    background-color: rgb(245, 109, 46);
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase
+}
+
+body>.skiptranslate {
+    display: none !important;
+}
+
+body {
+    top: 0px !important
+}
+
+
+.wrapper {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.nav {
+    list-style-type: none;
+    margin: 40px 0 0 0;
+    float: right;
+    padding: 0;
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+    width: 50%;
+}
+
+.nav li {
+    display: inline;
+    margin-right: 25px;
+}
+
+.nav li:last-child {
+    margin: 0;
+
+}
+
+a {
+    color: inherit;
+    text-decoration: none
+}
+
+a:hover {
+    color: rgb(182, 182, 179);
+}
+
+.fa-user {
+    color: rgb(245, 109, 46);
+    padding: 0 3px
+}
+
+.icon-dot {
+    display: inline-block;
+    background-color: rgb(247, 247, 247);
+    border: 10px solid rgb(255, 255, 255);
+    border-radius: 50%;
+    margin-right: 7px;
+}
+
+.drpdwn {
+    margin-left: -9px;
+    font-size: 15px;
+}
+
+.dropdown {
+    float: right;
+    /* overflow: hidden; */
+    display: none;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: #fff;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 20;
+    right: 0;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
