--- a/toTheNew/main.css
+++ b/toTheNew/main.css
@@ -278,7 +278,6 @@ hr {
     font-size: 14px;
     font-weight: 900;
     font-style: italic;
-    transition: ease-in
 }
 
 .know-more-btn:hover {
@@ -313,34 +312,213 @@ hr {
 
 
 
+.card-left {
+    float: left;
+    margin: 50px 0;
+    background: url("sources/cropped_car.jpg") no-repeat;
+    background-size: cover;
+    width: 70%;
+    height: 396px
+}
+
+.card-right {
+    float: right;
+    margin: 50px 0;
+    width: 30%;
+    height: 396px;
+    color: #fff
+}
+
+.card-right-top {
+    background: url("sources/gals.jpg") no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 198px;
+}
+
+.card-right-bottom {
+    background: url("sources/gals.jpg") no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 198px;
+}
+
+.view-case-study-btn {
+
+    border: 2px solid rgb(230, 230, 230);
+    color: rgb(250, 250, 250);
+    padding: 12px 20px;
+    font-size: 14px;
+    font-weight: 900;
+    font-style: italic;
+    margin-left: 20px
+}
+
+.view-case-study-btn:hover {
+    color: #000;
+    background: #fff
+}
+
+.card-desc {
+    padding-top: 20px;
+    display: none
+}
+
+.card-desc p {
+    margin: 0 0 20px 0;
+    padding: 10px 20px
+}
+
+.card-desc h3 {
+    margin: 0;
+    padding: 10px 20px
+}
+
+
+.card-right-top:hover .card-desc,
+.card-right-bottom:hover .card-desc {
+    display: block;
+
+}
+
+.card-right-top:hover,
+.card-right-bottom:hover {
+    background: linear-gradient(to right, #000, transparent), url('sources/gals.jpg') no-repeat;
+    background-size: cover
+}
+
+table {
+    margin: 40px auto;
+    width: 80%
+}
+
+table tr {
+    padding: 20px;
+}
+
+table tr td {
+    width: 25%;
+    padding: 30px;
+    text-align: center
+}
+
+table tr td span {
+    background: url("sources/brands.jpg");
+    background-repeat: no-repeat;
+    display: inline-block;
+}
+
+.airbus {
+    background-position: -48px -48px;
+    width: 96px;
+    height: 32px;
+}
+
+.sonyliv {
+    background-position: -248px -40px;
+    width: 48px;
+    height: 53px;
+}
+
+.time-warner {
+    background-position: -392px -40px;
+    width: 96px;
+    height: 48px;
+
+}
+
+.thought-buzz {
+    background-position: -568px -54px;
+    width: 88px;
+    height: 26px;
+}
+
+.micar {
+    background-position: -560px -144px;
+    width: 98px;
+    height: 40px;
+}
+
+.matse {
+    background-position: -232px -144px;
+    width: 80px;
+    height: 32px;
+}
+
+.connect {
+    background-position: -400px -336px;
+    width: 88px;
+    height: 32px;
+}
+
+.swan {
+    background-position: -752px -32px;
+    width: 64px;
+    height: 64px;
+}
 
 
 
+.grails-summit {
+    background: url("sources/grails.jpg");
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
+    position: relative;
+}
 
+.grails-summit:after {
+    content: '';
+    position: absolute;
+    background: rgb(0, 0, 0, .5);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 
+}
 
+.grails-summit-content-text {
+    color: white;
 
+    z-index: 1;
+    text-align: center;
+    width: 40%;
+    position: absolute;
+    bottom: 20%;
+    right: 8%;
+}
 
+.grails-summit-content-text h1 {
+    font-style: italic;
+    font-size: 50px
+}
 
+.grails-summit-content-text p {
+    line-height: 25px;
+    margin-bottom: 30px;
+    color: #000;
+    font-weight: 400;
+    font-size: 20px
+}
 
+.rsvp-btn {
+    box-shadow: none;
+    border: 1px solid rgb(255, 255, 255);
+    background: rgb(223, 85, 22);
+    width: 150px;
+    color: #fff;
+    display: inline-block;
+    padding: 15px 20px;
+    margin: 0 7px;
+    font-weight: 700;
+    font-style: italic
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.rsvp-btn:hover {
+    border-color: rgb(223, 85, 22);
+    background: none;
+}
 
 
 .footer-top {
