--- a/background-animation/main.css
+++ b/background-animation/main.css
@@ -1,6 +1,12 @@
+body {
+    height: 100%;
+    margin: 0px
+}
+
 .container {
+    height: 100%;
     width: 100%;
-    height: 640px;
+    /* height: 640px; */
     background: url("images/background.png") no-repeat;
     background-size: cover
 }
