--- a/responsive-projection/main.css
+++ b/responsive-projection/main.css
@@ -84,6 +84,62 @@ a {
     color: rgb(191, 255, 14)
 }
 
+
+
+
+.dropbtn {
+    background: url('images/mobile-menu.png');
+    background-size: cover;
+    height: 32px;
+}
+
+.dropdown {
+    float: right;
+    display: none;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: #fff;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    right: 0;
+}
+
+.dropdown-content a {
+    float: none;
+    color: rgb(0, 0, 0);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: rgb(27, 27, 27);
+    color: rgb(255, 253, 253)
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
+
 .head-bottom {
     width: 70%;
     text-align: center;
@@ -278,6 +334,15 @@ footer {
 @media screen and (max-width: 768px) {
 
 
+    .nav {
+        display: none;
+    }
+
+    .dropdown {
+        display: inline-block;
+        margin-top: 20px
+    }
+
     .learn-more-list li,
     .learn-more-list li:last-child {
         width: 60%;
@@ -324,7 +389,6 @@ footer {
     .learn-more-list li {
         width: 70%
     }
-
 
 
 }
