--- a/responsive-projection/main.css
+++ b/responsive-projection/main.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-
+    box-sizing: border-box
 }
 
 .clearfix:after {
@@ -272,7 +272,8 @@ footer {
 }
 
 .get-in-touch-form {
-    text-align: left
+    text-align: left;
+
 }
 
 .get-in-touch-form label {
@@ -282,7 +283,7 @@ footer {
 
 .fields {
     width: 100%;
-    padding: 10px;
+    padding: 10px 0 10px 10px;
     margin: 10px 0 25px 0;
     border-radius: 5px;
     font-weight: 400;
@@ -354,13 +355,11 @@ footer {
         width: 80%
     }
 
-    .wrapper {
-        width: 80%
-    }
-
+    .fields,
     .name-field,
     .email-field {
-        width: 100%
+        width: 100%;
+        display: inline-block
     }
 
 
