gave margin-right to form

--- a/responsive-projection/main.css
+++ b/responsive-projection/main.css
@@ -272,7 +272,8 @@ footer {
 }
 
 .get-in-touch-form {
-    text-align: left
+    text-align: left;
+    margin-right: 20px
 }
 
 .get-in-touch-form label {
