--- a/agni/main.css
+++ b/agni/main.css
@@ -6,6 +6,7 @@ header {
 .branding {
     display: inline-block;
     padding: 20px;
+    /* float: left; */
 }
 
 
@@ -54,6 +55,12 @@ body {
 .wrapper {
     width: 90%;
     margin: 0 auto;
+}
+
+.wrapper::after {
+    clear: both;
+    display: block;
+    content: '';
 }
 
 .nav {
@@ -151,7 +158,7 @@ a:hover {
 .banner {
     background: url(sources/banner-bg.jpg);
     width: 100%;
-    height: 450px;
+    height: 465px;
     background-size: cover;
     position: relative;
 }
@@ -238,6 +245,9 @@ a:hover {
 }
 
 
+.featured-videos {
+    padding-top: 90px
+}
 
 .featured-heading {
 
@@ -245,7 +255,7 @@ a:hover {
     font-weight: 800;
     text-align: center;
     color: #2e2e2e;
-    margin-top: 90px;
+    /* margin-top: 90px; */
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
@@ -273,12 +283,14 @@ a:hover {
     position: absolute;
     bottom: 13%;
     right: 10%;
+    /* float: left; */
 
 }
 
 .artist {
 
     width: 100%;
+    height: auto;
 }
 
 #play-icon {
